--- a/source/404.html
+++ b/source/404.html
@@ -30,8 +30,8 @@
             }
 
             body {
-                max-width: 500px;
-                _width: 500px;
+                max-width: 650px;
+                _width: 650px;
                 padding: 30px 20px 50px;
                 border: 1px solid #b3b3b3;
                 border-radius: 4px;
@@ -64,8 +64,8 @@
             }
 
             .container {
-                max-width: 380px;
-                _width: 380px;
+                max-width: 530px;
+                _width: 530px;
                 margin: 0 auto;
             }
 
@@ -92,7 +92,7 @@
             }
 
             #goog-wm-qt {
-                width: 220px;
+                width: 370px;
                 height: 20px;
                 padding: 5px;
                 margin: 5px 10px 0 0;
@@ -148,6 +148,8 @@
                 <li>a mistyped address</li>
                 <li>an out-of-date link</li>
             </ul>
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/t3otBjVZzT0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
             <script>
                 var GOOG_FIXURL_LANG = (navigator.language || '').slice(0,2),GOOG_FIXURL_SITE = location.host;
             </script>
